finish user login form check and token renew
